--- a/08/2025_08_07.ipynb
+++ b/08/2025_08_07.ipynb
@@ -53,6 +53,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b951d52e",
+   "metadata": {},
+   "source": [
+    "# git 정리하기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b83c9fb",
+   "metadata": {},
+   "source": [
+    "1. github 레포지토리 만들기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "902cdc75",
+   "metadata": {},
+   "source": [
+    "git clone \"url 주소\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8645eceb",
+   "metadata": {},
+   "source": [
+    "`.gitignore` 파일 만들기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "37c3c63c",
    "metadata": {},
    "source": [
