--- a/08/2025_08_07.ipynb
+++ b/08/2025_08_07.ipynb
@@ -13,7 +13,7 @@
    "id": "b680d16f",
    "metadata": {},
    "source": [
-    "`uv init` : uv 환경 세팅"
+    "1. `uv init` : uv 환경 세팅"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "id": "d96a1933",
    "metadata": {},
    "source": [
-    "`uv venv` : 가상환경 설치"
+    "2. `uv venv` : 가상환경 설치"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "id": "7875090b",
    "metadata": {},
    "source": [
-    "`.venv\\Scripts\\activate` : 가상환경 들어가기"
+    "3. `.venv\\Scripts\\activate` : 가상환경 들어가기"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "id": "210f5a1a",
    "metadata": {},
    "source": [
-    "`uv add 내가 설치해야하는 모듈 이름`"
+    "4. `uv add 내가 설치해야하는 모듈 이름`"
    ]
   },
   {
@@ -53,49 +53,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b951d52e",
+   "id": "59c63336",
    "metadata": {},
    "source": [
-    "# git 정리하기"
+    "# UV 가상환경 살제 이후 재설치 하는 방법\n",
+    "- pyproject.toml 과 .python-version 파일이 있는 경우\n",
+    "- 기존에 쓰던 컴퓨터가 아닌 다른 컴퓨터에서 깃허브 클론을 한 경우"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2b83c9fb",
+   "id": "7535b5ae",
    "metadata": {},
    "source": [
-    "1. github 레포지토리 만들기"
+    "1. `uv venv` : 가상환경 설치"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "902cdc75",
+   "id": "3987876d",
    "metadata": {},
    "source": [
-    "git clone \"url 주소\""
+    "2. `.venv\\Scripts\\activate` : 가상환경 들어가기"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8645eceb",
+   "id": "eedae7e4",
    "metadata": {},
    "source": [
-    "`.gitignore` 파일 만들기"
+    "3. `uv pip install .` : 내가 의존성을 가진 모든 모듈을 설치해라"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "37c3c63c",
-   "metadata": {},
-   "source": [
-    "# 개발 용어 공부하기"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "74f6af8a",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
