--- a/08/2025_08_08.ipynb
+++ b/08/2025_08_08.ipynb
@@ -5,7 +5,7 @@
    "id": "13cd47d8",
    "metadata": {},
    "source": [
-    "# sickit-surprise 설치 에러 해결"
+    "# scikit-surprise 설치 에러 해결"
    ]
   },
   {
